SR-6272: Show “Fix it” for numerical conversions